solve character missing  issues on mobile device

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -51,17 +51,17 @@
 .you-btn {
   background-image: -webkit-linear-gradient(
     112deg,
-    var(--purple-200, #7802af) 0%,
-    var(--blue-300, #0cc6ef) 100%
+     #7802af 0%,
+    #0cc6ef 100%
   );
   background-image: linear-gradient(
     -22deg,
-    var(--purple-200, #7802af) 0%,
-    var(--blue-300, #0cc6ef) 100%
+     #7802af 0%,
+    #0cc6ef 100%
   );
   padding: 0.375rem 1.5rem;
   border-radius: 50rem;
-  color: var(--white, #ffffff);
+  color:  #ffffff;
   text-decoration: none;
   font-family: "Poppins", sans-serif;
   font-size: 1.0625rem;
@@ -74,16 +74,16 @@
 }
 
 .you-btn:hover {
-  color: var(--white, #ffffff);
+  color:#ffffff;
   background-image: -webkit-linear-gradient(
     112deg,
-    var(--purple-200, #7802af) 0%,
-    var(--blue-300, #0cc6ef) 90%
+    #7802af 0%,
+   #0cc6ef 90%
   );
   background-image: linear-gradient(
     -22deg,
-    var(--purple-200, #7802af) 0%,
-    var(--blue-300, #0cc6ef) 90%
+    #7802af 0%,
+     #0cc6ef 90%
   );
 }
 
@@ -105,14 +105,17 @@
 .hero::before {
   position: absolute;
   content: "";
+  width: 280px;
+  height: 264px;
   background-image: url("../../assets/images/hero-char.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
   left: 4%;
-  bottom: -4.2rem;
+  bottom: -1.5rem;
   z-index: 0;
 }
+
 
 .hero .hero-char {
   max-width: 100%;
